// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe fucnionar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Productcard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard Debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
